# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.127 2012/02/11 20:44:40 idl0r Exp $

  11 Feb 2012; Christian Ruppert <idl0r@gentoo.org> vdr-plugin.eclass:
  Remove vdr_add_local_patch() and use epatch_user() from eutils instead. Issue
  a error in case the old variable to pass user patches is still used. Also the
  example has been removed as it was actually a common ebuild example, nothing
  specific. Update descriptions.

  11 Feb 2012; Ulrich Müller <ulm@gentoo.org> elisp-common.eclass:
  Delete declaration of unused variable.

  10 Feb 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> python.eclass:
  Revert previous commit to python eclass, breaks any ebuild using
  PYTHON_DEPEND=2.4 without any need or prior warning

  10 Feb 2012; Patrick Lauer <patrick@gentoo.org> python.eclass:
  Removing python 2.4 support from python eclass

  09 Feb 2012; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
  Make src_test() a noop for qt-multimedia (bug #332299).

  09 Feb 2012; Markos Chandras <hwoarang@gentoo.org> qt4-build.eclass:
  Drop buggy code as discussed on qt@gentoo.org on 2012/02/02

  09 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> gnustep-base.eclass:
  Use check on configuration file instead of has_version for EAPI0 ebuilds

  08 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> gnustep-base.eclass:
  Force clang when using experimental libobjc2 support

  07 Feb 2012; Lars Wendler <polynomial-c@gentoo.org> mozlinguas.eclass:
  Whitespace fix

  07 Feb 2012; Lars Wendler <polynomial-c@gentoo.org> mozlinguas.eclass:
  Fixed eclass for usage with seamonkey (which has langpacks in beta releases).

  07 Feb 2012; Sergei Trofimovich <slyfox@gentoo.org> haskell-cabal.eclass:
  Added support for CABAL_EXTRA_BUILD_FLAGS and HCFLAGS magic variables.

  06 Feb 2012; Nirbheek Chauhan <nirbheek@gentoo.org> mozconfig-3.eclass: