@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.127 2012/02/11 20:44:40 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.128 2012/02/12 00:20:54 robbat2 Exp $
+
+  12 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> autotools.eclass:
+  Provide a way to run eautoreconf without automake by using
+  WANT_AUTOMAKE=none.
 
   11 Feb 2012; Christian Ruppert <idl0r@gentoo.org> vdr-plugin.eclass:
   Remove vdr_add_local_patch() and use epatch_user() from eutils instead. Issue
